Fix key error and overflow develop env issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,9 +22,6 @@ html{
 	@apply text-base leading-normal antialiased font-normal text-black font-sans;
 	font-synthesis: none;
 	font-kerning: normal;
-	#___gatsby{
-		overflow-x: hidden;
-	}
 }
 h1{
 	@apply font-header text-60 leading-tight font-extrabold mb-8 text-black-dark text-center relative pb-8;
